--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head>
     <title>Video Playback and JSON</title>
 
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#541aff">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css">
@@ -36,6 +38,8 @@
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js"></script>
+    <script src="public/AddServiceWorker.js"></script>
+
     <script>
         $(document).ready(function() {
             var video = $("#myVideo")[0]; 
@@ -51,8 +55,7 @@
                     url: '/readData',
                     dataType: 'json',
                     success: function(data) {
-                        debugger;
-                        var currentTime = data.playbackTime || 0;
+                         var currentTime = data.playbackTime || 0;
                         var isPaused = data.isPaused || false;
                         var storedUrl = data.videoUrl || '';
                         if (true) {
